--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
         <div class="left-div">
             <div class="search">
                 <form id="song-form" method="post" action="addsong">
-                    <input type="text" name="url" id="searchbar" placeholder="Enter a youtube link for the song you want to listen...">
+                    <input type="text" name="url" id="searchbar" autocomplete="off" placeholder="Enter a youtube link for the song you want to listen...">
                     <button type="sumbit" id="search-icon">
                         <img src="static/searchcom.svg" alt="SEARCH" width="20px">
                     </button>
@@ -45,46 +45,32 @@
             <br>
             <div class="text-playlist">
                 <div id="next-to-play">Next song on the list:</div>
-
-
                 <div id="playlist">
                 </div>
             </div>
         </div>
         <div class="stations"s>
             <div id="most-listened-stations-txt">Your most listen radio stations:</div>
-            <div class="individual-station">
-                <button class="change-station-button">
-                    <a>pepper</a>
-                </button>
-            </div>
-            <div class="individual-station">
-                <button class="change-station-button">
-                    <a>kiss</a>
-                </button>
-            </div>
-            <div class="individual-station">
-                <button class="change-station-button">
-                    <a>red</a>
-                </button>
-            </div>
-            <div class="individual-station">
-                <button class="change-station-button">
-                    <a>skylo</a>
-                </button>
-            </div>
-            <div class="individual-station">
-                <button class="change-station-button">
-                    <a>picaso</a>
-                </button>
-            </div>
+            {% for station in radios %}
 
+                <form class="individual-station" action="/play-radio" method="POST">
+                    <input name="radio_name" value="{{ station }}" type="hidden" style="display:none;" />
+                    <input type="submit" class="change-station-button" value="{{ station }}" />
+                </form>
+            {% endfor %}
+            </div>
         </div>
     </div>
 
     <div class="active-song">
-        <button id="play-button-song">
+        <button class="player-buttons" id="play-button">
             <img src="static/play-com.svg" alt="PLAY" width="35px" id="play">
+        </button>
+        <button class="player-buttons" id="stop-button">
+            <img src="static/stop-icon.svg" alt="STOP" width="35px" id="play">
+        </button>
+        <button class="player-buttons" id="next-button">
+            <img src="static/play-next-icon.svg" alt="NEXT" width="35px" id="play">
         </button>
         <a id="songPlaying"></a>
     </div>
