--- a/static/styles.css
+++ b/static/styles.css
@@ -140,8 +140,9 @@ body {
 }
 
 .active-song {
-    position: sticky;
+    position: absolute;
     bottom: 0;
+    left: 17.5%;
     display: flex;
     height: 4em;
     border-radius: 10px;
