--- a/static/styles.css
+++ b/static/styles.css
@@ -123,7 +123,7 @@ body {
 }
 
 .individual-station {
-    margin: 2em;
+    margin: 2em; 
     border: 1em solid #1ed760;
     background-color: #1ed760;
     border-radius: 10px;
@@ -140,7 +140,7 @@ body {
 }
 
 .active-song {
-    position: absolute;
+    position: absolute; 
     bottom: 0;
     left: 17.5%;
     display: flex;
@@ -152,7 +152,7 @@ body {
     align-items: center;
     width: 65%;
     margin: auto;
-    padding: 0 3em;
+    padding: 0 3em; 
     box-sizing: border-box;
 }
 
@@ -200,4 +200,41 @@ body {
     flex-grow: 0;
     flex-shrink: 0;
     aspect-ratio: 16 / 9;
+}
+
+@media (max-width: 850px) {
+    body {
+        height: 70vh;
+    }
+    .items {
+        flex-direction: column-reverse;
+        margin: 0.5em;
+        gap: 2em;
+        height: 100%;
+    }
+    .top-space {
+        display: none;
+    }
+    .stations{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        box-sizing: border-box; 
+    }
+    .individual-station {
+        display: inline;
+        margin: 0;
+    }
+    #most-listened-stations-txt {
+        display: none;
+    }
+    .left-div {
+        box-sizing: border-box;
+        flex-grow: 1;
+        padding: 0 1em;
+    }
+    .active-song {
+        width: 100%;
+        left: 0;
+    }
 }
